# astar-speedrun

./: .env  .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json
.github/: FUNDING.yml
AstarzkEVM/: package-lock.json  package.json
astar/: README.md
astar-speedrun/content/astar/nft-psp34/server/: package.json  swanky.config.json
astar/hardhat-example/: README.md  hardhat.config.ts  package-lock.json  package.json
astar/hardhat-example/contracts/: Lock.sol
astar/hardhat-example/ignition/deployments/chain-1946/: deployed_addresses.json  journal.jsonl
astar/hardhat-example/ignition/deployments/chain-1946/artifacts/: Apollo#Rocket.dbg.json  Apollo#Rocket.json
astar/hardhat-example/ignition/deployments/chain-6038361/: journal.jsonl
astar/hardhat-example/ignition/modules/: Rocket.ts
astar/mortal-0/lesson-3/: README.md  package-lock.json
astar/nft-psp34/server/contracts/minter/: Cargo.toml
astar/nft-psp34/server/contracts/minter/src/: lib.rs
astar/nft-psp34/server/tests/minter/: index.test.ts
soneium/: README.md
soneium/demigod-2/lottery/: package-lock.json  package.json  tsconfig.json
soneium/mortal-0/: exampleCoin.sol
soneium/mortal-0/lesson-3/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
soneium/mortal-0/lesson-3/ignition/deployments/chain-1946/: deployed_addresses.json  journal.jsonl
soneium/mortal-0/lesson-3/ignition/deployments/chain-1946/artifacts/: Apollo#Rocket.dbg.json  Apollo#Rocket.json
soneium/mortal-0/lesson-4/: README.md
src/: main.rs
